# fwi3d

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
examples/: elastic_modeling.ipynb
examples/par/: elastic_modeling.p  full_parameters_description.p  srcoord.txt
src/: CMakeLists.txt
src/cpp/: bsplines.cpp  injector.cpp  misc.cpp  nlsolver.cpp  operator.cpp  optimization.cpp  param.cpp  spatial_operators.cpp  we_op.cpp
src/include/: IO.hpp  MpiWrapper.hpp  bsplines.hpp  injector.hpp  misc.hpp  mpiWrapper.hpp  nlsolver.hpp  operator.hpp  optimization.hpp  param.hpp  spatial_operators.hpp  vecReg.hpp  we_op.hpp  zfpWrapper.hpp
src/main/: bsplines3d.cpp  fwi3d.cpp  we_modeling.cpp
